[package]
name = "clippy_dev"
description = "Clippy developer tooling"
version = "0.0.1"
edition = "2024"

[dependencies]
clippy_internal = { path = "../clippy_internal" }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.4", features = ["derive"] }
itertools = "0.12"
opener = "0.7"
walkdir = "2.3"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
