[package]
name = "clippy_internal"
description = "Internal library for developing Clippy"
version = "0.0.1"
edition = "2024"

[dependencies]
annotate-snippets = { version = "0.12.10", features = ["simd"] }
anstream = "0.6.20"
itertools = "0.12"
memchr = "2.7.6"
rustc-literal-escaper = "0.0.7"
walkdir = "2.3"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
